--- a/Aplikacija/Studentska služba/Studentska služba/Studentska_služba.csproj
+++ b/Aplikacija/Studentska služba/Studentska služba/Studentska_služba.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Converters\NegateBooleanConverter.cs" />
     <Compile Include="Converters\ObjectToVisibility.cs" />
     <Compile Include="Converters\TimeConverter.cs" />
+    <Compile Include="DatabaseController.cs" />
     <Compile Include="Helpers\DetailsMode.cs" />
     <Compile Include="ViewModels\DokumentacijaZaProfesore\DokumentacijaZaProfesoreViewModel.cs" />
     <Compile Include="ViewModels\MainPage\GenericCRUDViewModel.cs" />
@@ -141,6 +142,8 @@
     <Compile Include="ViewModels\Podaci\Smerovi\SmeroviViewModel.cs" />
     <Compile Include="ViewModels\Podaci\Studenti\StudentiViewModel.cs" />
     <Compile Include="ViewModels\PotvrdeUverenja\PotvrdeUverenjaViewModel.cs" />
+    <Compile Include="ViewModels\Statistika\ChartData.cs" />
+    <Compile Include="ViewModels\Statistika\StatistikaViewModel.cs" />
     <Compile Include="Views\DokumentacijaZaProfesore\DokumentacijaZaProfesoreView.xaml.cs">
       <DependentUpon>DokumentacijaZaProfesoreView.xaml</DependentUpon>
     </Compile>
@@ -455,6 +458,9 @@
     <PackageReference Include="System.Linq.Dynamic.Core">
       <Version>1.0.9.2</Version>
     </PackageReference>
+    <PackageReference Include="WinRTXamlToolkit.Controls.DataVisualization.UWP">
+      <Version>2.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\..\source\repos\ClassLibrary4\ClassLibrary4\StudentskaSluzba.Model.csproj">
@@ -469,7 +475,6 @@
   <ItemGroup>
     <Folder Include="ViewModels\PrijemniIspit\" />
     <Folder Include="ViewModels\Settings\" />
-    <Folder Include="ViewModels\Statistika\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
