--- a/Aplikacija/Studentska služba/Studentska služba/Studentska_služba.csproj
+++ b/Aplikacija/Studentska služba/Studentska služba/Studentska_služba.csproj
@@ -260,16 +260,27 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <PRIResource Include="Strings\sr-Latn\NavigationViewItems.resw" />
-    <PRIResource Include="Strings\sr-Latn\Login.resw" />
-    <PRIResource Include="Strings\sr-Latn\DokumentacijaZaProfesore.resw" />
-    <PRIResource Include="Strings\sr-Latn\PotvrdeIUverenja.resw" />
-    <PRIResource Include="Strings\sr-Latn\Podesavanja.resw" />
-    <PRIResource Include="Strings\sr-Latn\PromenaLozinke.resw" />
-    <PRIResource Include="Strings\sr-Latn\Statistika.resw" />
-    <PRIResource Include="Strings\sr-Latn\PodaciNavigation.resw" />
-    <PRIResource Include="Strings\sr-Latn\CommandLine.resw" />
-    <PRIResource Include="Strings\sr-Latn\Podaci.resw" />
+    <PRIResource Include="Strings\de-DE\NavigationViewItems.resw" />
+    <PRIResource Include="Strings\de-DE\Login.resw" />
+    <PRIResource Include="Strings\de-DE\DokumentacijaZaProfesore.resw" />
+    <PRIResource Include="Strings\de-DE\PotvrdeIUverenja.resw" />
+    <PRIResource Include="Strings\de-DE\Podesavanja.resw" />
+    <PRIResource Include="Strings\de-DE\PromenaLozinke.resw" />
+    <PRIResource Include="Strings\de-DE\Statistika.resw" />
+    <PRIResource Include="Strings\de-DE\PodaciNavigation.resw" />
+    <PRIResource Include="Strings\de-DE\CommandLine.resw" />
+    <PRIResource Include="Strings\de-DE\Podaci.resw" />
+    <PRIResource Include="Strings\en-US\CommandLine.resw" />
+    <PRIResource Include="Strings\en-US\DokumentacijaZaProfesore.resw" />
+    <PRIResource Include="Strings\en-US\Login.resw" />
+    <PRIResource Include="Strings\en-US\NavigationViewItems.resw" />
+    <PRIResource Include="Strings\en-US\Podaci.resw" />
+    <PRIResource Include="Strings\en-US\PodaciNavigation.resw" />
+    <PRIResource Include="Strings\en-US\Podesavanja.resw" />
+    <PRIResource Include="Strings\en-US\PotvrdeIUverenja.resw" />
+    <PRIResource Include="Strings\en-US\PromenaLozinke.resw" />
+    <PRIResource Include="Strings\en-US\Statistika.resw" />
+    <PRIResource Include="Strings\en-US\DialogMessages.resw" />
     <None Include="Studentska služba_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -506,9 +517,7 @@
       <Name>StudentskaSluzba.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Strings\en-US\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
