--- a/Aplikacija/Studentska služba/Studentska služba/Studentska_služba.csproj
+++ b/Aplikacija/Studentska služba/Studentska služba/Studentska_služba.csproj
@@ -281,6 +281,9 @@
     <PRIResource Include="Strings\en-US\PromenaLozinke.resw" />
     <PRIResource Include="Strings\en-US\Statistika.resw" />
     <PRIResource Include="Strings\en-US\DialogMessages.resw" />
+    <None Include="Assets\Uputstvo.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Studentska služba_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
